[gd_scene load_steps=11 format=3 uid="uid://o7cpgvdng41i"]

[ext_resource type="Script" uid="uid://px8ryrbyi8kk" path="res://scripts/menu.gd" id="1_con2f"]
[ext_resource type="Theme" uid="uid://dfw7lrrxmofku" path="res://assets/text_box_theme.tres" id="1_vjb58"]
[ext_resource type="FontFile" uid="uid://51nnvssc4vny" path="res://assets/LeagueSpartan-Bold.otf" id="2_con2f"]
[ext_resource type="Shader" uid="uid://b3cwwfv45xu85" path="res://assets/menu.gdshader" id="2_mhnvy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4ytvr"]
shader = ExtResource("2_mhnvy")
shader_parameter/lod = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mhnvy"]
content_margin_left = 32.0
content_margin_right = 32.0
bg_color = Color(0.14902, 0.14902, 0.14902, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4ytvr"]
line_spacing = 12.0
font = ExtResource("2_con2f")
font_size = 18

[sub_resource type="Animation" id="Animation_4ytvr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_mhnvy"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.812]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g3eks"]
_data = {
&"RESET": SubResource("Animation_4ytvr"),
&"blur": SubResource("Animation_mhnvy")
}

[node name="Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_con2f")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_4ytvr")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -72.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 960.0
offset_top = 480.0
offset_right = -960.0
offset_bottom = -504.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Resume" type="Button" parent="Panel/VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Resume"

[node name="Info" type="Button" parent="Panel/VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Info"

[node name="Quit" type="Button" parent="Panel/VBoxContainer"]
process_mode = 3
z_index = 8
layout_mode = 2
text = "Quit"

[node name="Info" type="Label" parent="."]
visible = false
z_index = 10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vjb58")
theme_override_styles/normal = SubResource("StyleBoxFlat_mhnvy")
text = "In-game only controls:
Open pause menu by pressing “0” [zero]
Toggle hints on/off by pressing “1” (after clicking on it for the first time)


"
label_settings = SubResource("LabelSettings_4ytvr")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Back" type="Button" parent="Info"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0741
offset_top = 186.809
offset_right = 25.9259
offset_bottom = 222.809
grow_horizontal = 2
grow_vertical = 2
text = "Back"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_g3eks")
}

[connection signal="pressed" from="Panel/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Info" to="." method="_on_info_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Info/Back" to="." method="_on_back_pressed"]
